PyMaker/datas/object2/RawHTML/i8601/Python_DOC_referPages.why-does-000-evaluate-to-0-in-python-3.txt
<div class="post-text" itemprop="text">
<p>Since the octal prefix is now <code>0o</code> in Python 3 it's not legal to write <code>0777</code> any more. Okay.</p>
<p>So why is it legal to write <code>00</code> which evaluates properly to <code>0</code> whereas other digits trigger a syntax error?</p>
<pre><code>&gt;&gt;&gt; 01
  ...
  File "&lt;interactive input&gt;", line 1
    01
     ^
SyntaxError: invalid token
&gt;&gt;&gt; 
&gt;&gt;&gt; 00
0
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>If one takes a look at the <a href="https://docs.python.org/3/reference/lexical_analysis.html#integer-literals" rel="noreferrer"><em>Lexical Analysis</em></a> (Integer Literal Section) page:</p>
<blockquote>
<pre><code>integer      ::=  decinteger | bininteger | octinteger | hexinteger
decinteger   ::=  nonzerodigit (["_"] digit)* | <b>"0"+(["_"] "0")*</b>
...</code></pre>
</blockquote>
<p>So that means that a <code>decinteger</code> either begins with a nonzero digit (followed by all possible digits and optionally underscores), or is a <strong>sequence of zeros</strong> with optionally underscores (which maps to zero).</p>
<p>The documentation furthermore states that:</p>
<blockquote>
<p>Note that leading zeros in a <strong>non-zero decimal number</strong> are <strong>not</strong> allowed.</p>
</blockquote>
<p>So it means they make an exception for zero (in all documentation for <a class="post-tag" href="/questions/tagged/python-3.3" rel="tag" title="show questions tagged 'python-3.3'">python-3.3</a> one can find there): you can write zero as a sequence of zeros. My guess is that of course they have to include <code>"0"</code> (how else would you specify zero as a <code>decinteger</code>?), so why not allow more zeros in that case, regardless of the number system, <code>000</code> is and stays zero. They probably do not want to allow <code>01</code> as a <code>decinteger</code> to prevent accidentally running <a class="post-tag" href="/questions/tagged/python-2.x" rel="tag" title="show questions tagged 'python-2.x'">python-2.x</a> code and thus obtaining totally different results.</p>
<p>Finally note that the <strong>underscores are only part of that specification since <a class="post-tag" href="/questions/tagged/python-3.6" rel="tag" title="show questions tagged 'python-3.6'">python-3.6</a></strong>: in the <a href="https://docs.python.org/3.5/reference/lexical_analysis.html#integer-literals" rel="noreferrer">specifications for 3.5</a> they are not mentioned in the grammar.</p>
<p>In <a class="post-tag" href="/questions/tagged/python-2.7" rel="tag" title="show questions tagged 'python-2.7'">python-2.7</a> <a href="https://docs.python.org/2.7/reference/lexical_analysis.html#integer-literals" rel="noreferrer">the documentation</a> specifies a zero followed by other digits (also other zeros as an <code>octinteger</code>:</p>
<blockquote>
<pre><code>integer        ::=  decimalinteger | octinteger | hexinteger | bininteger
decimalinteger ::=  nonzerodigit digit* | "0"
octinteger     ::=  "0" ("o" | "O") octdigit+ | "0" octdigit+
</code></pre>
</blockquote>
</div>
<span class="comment-copy">Looks like a <code>decinteger</code>: <a href="https://docs.python.org/3/reference/lexical_analysis.html#integer-literals" rel="nofollow noreferrer">docs.python.org/3/reference/…</a> (didnt dv)</span>
<span class="comment-copy">@WillemVanOnsem yes, looks very much like that. But what's the use for it?</span>
<span class="comment-copy">based on the syntax I would say only a sequence of zeros is allowed (if it does not start with a non-zero digit or with a <code>0o</code>, <code>0b</code>, etc.)</span>
<span class="comment-copy">that's part of the answer, thanks. But anyone knows what's the use? and <code>00_00</code> is still invalid syntax BTW.</span>
<span class="comment-copy"><code>00_00</code> works fine with my Python 3.6</span>
<span class="comment-copy">@Jean-FrançoisFabre: my guess would be that a sequence of zeros is always zero, regardless of the radix one uses.</span>
<span class="comment-copy">@ŁukaszRogalski ok so the underscores are new, since in 3.4 it doesn't work.</span>
<span class="comment-copy">@WillemVanOnsem. I wanted more than a guess, but thanks anyway :) BTW you could add that the underscore syntax is new since 3.5 or 3.6 since it doesn't work on 3.4</span>
